[tool.poetry]
name = "ventilationcontrol"
version = "0.1.0"
description = ""
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
